crates/stef-parser/tests/snapshots/parser__error@const_literal_float.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "const VALUE: f64 = 1.0z;"
input_file: crates/stef-parser/tests/inputs/invalid/const_literal_float.stef
---
stef::parse::const_def (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseConstError.html)

  × Failed to parse const declaration
  ╰─▶ Unexpected character
   ╭─[invalid/const_literal_float.stef:1:1]
 1 │ const VALUE: f64 = 1.0z;
   · ────────────┬───────────
   ·             ╰── In this declaration
   ╰────
  help: Expected const declaration in the form `❬B❭const <NAME>: <type> = <literal>;❬B❭`

Error: stef::parse::const_def::char (https://docs.rs/stef-parser/0.1.0/stef_parser/error/enum.ParseConstCause.html#variant.UnexpectedChar)

  × Unexpected character
   ╭─[invalid/const_literal_float.stef:1:1]
 1 │ const VALUE: f64 = 1.0z;
   ·                       ▲
   ·                       ╰── Problematic character
   ╰────
  help: Expected a `❬Y❭;❬Y❭` here

